# cpp_challenges

./: .gitattributes  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  app_logic_SquareDigits.cpp  app_logic_boilerplate_cpp_with_fortran.cpp  main.cc  mainSquareDigits.cc  main_boilerplate_cpp_with_fortran.cpp
src/: CMakeLists.txt
src/boilerplate_c/: CMakeLists.txt  boilerplate_c.c  boilerplate_c.h
src/boilerplate_cpp/: CMakeLists.txt  Livro.cpp
src/boilerplate_cpp_with_fortran/: CMakeLists.txt  fortran_wrapper.cpp  fortran_wrapper.hpp  helloworld.f90
src/square_digits/: CMakeLists.txt  SquareDigits.cc  SquareDigits.cpp  SquareDigits.hpp
